updates composer file

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "Meet",
-            "email": "meet.mehta@kodytechnolab.com"
+            "email": "meetmehta554@gmail.com"
         }
     ],
     "minimum-stability": "dev",
